--- a/styles.css
+++ b/styles.css
@@ -1,1 +1,19 @@
 /*  your css code here. If applicable */
+.body{
+	background:rgb(204, 204, 204);
+	
+}
+.list{
+	list-style-type: none;
+	text-decoration-line: none;
+	background:white;
+	border: solid black 1px;
+	border-radius: 5px;
+}
+.text{
+	text-align:center;
+}
+.player_one{
+	background-color: rgb(255, 255, 255);
+	padding: border-radius;
+}
